--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
-gtk-theme-name=Paper
+gtk-theme-name=Arc-Dark
 gtk-font-name=Hermit 10
-gtk-icon-theme-name=Paper
-gtk-cursor-theme-name=Paper
+gtk-icon-theme-name=Arc
+gtk-cursor-theme-name=Adwaita
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
