Added fifo output for visualization for mpd

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -195,6 +195,13 @@ input {
 #       proxy_password "password"
 }
 
+audio_output {
+    type                    "fifo"
+    name                    "my_fifo"
+    path                    "/tmp/mpd.fifo"
+    format                  "44100:16:2"
+}
+
 #
 ###############################################################################
 
