--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Arc-Dark
-gtk-font-name=Hermit 10
-gtk-icon-theme-name=Arc
+gtk-theme-name=Flat-Remix-GTK-Green-Dark
+gtk-font-name=Noto Sans Medium 11
+gtk-icon-theme-name=Flat-Remix-Green-Dark
 gtk-cursor-theme-name=Adwaita
 gtk-xft-antialias=1
 gtk-xft-hinting=1
