--- a/.config/i3/config
+++ b/.config/i3/config
@@ -48,6 +48,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec termite
+# bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+w kill
@@ -173,3 +174,6 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Start Polybar
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
