--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,15 +1,17 @@
-# Ayu Light Kitty Colors
+font_family RobotoMono
+font_size 15.0
 
-background #FAFAFA
-foreground #5C6773
+# Ayu (Light) (Converted from VSCode, customized by me)
+foreground #5c6166
+background #f8f9fa
 
 # TODO:
 # selection_background #ffffff
 # selection_foreground #ffffff
 # url_color #ffffff
 
-cursor #ABB0B6
-cursor_text_color #5C6773
+cursor #c7c7c7
+cursor_text_color #5c6166
 
 # # Tabs
 # active_tab_background #fffff
@@ -23,21 +25,21 @@ cursor_text_color #5C6773
 # inactive_border_color #ffffff
 
 # Normal colors
-color0 #FAFAFA
-color1 #F07178
-color2 #86B300
-color3 #FF6A00
-color4 #36A3D9
-color5 #A37ACC
-color6 #4CBF99
-color7 #FFFFFF
+color0 #f8f9fa
+color1 #ea6c6d
+color2 #68b841
+color3 #eca944
+color4 #3199e1
+color5 #9e75c7
+color6 #46ba94
+color7 #5c6166
 
 # Bright colors
-color8 #828C99
-color9 #FF3333
-color10 #86B300
-color11 #FF6A00
-color12 #36A3D9
-color13 #A37ACC
-color14 #4CBF99
-color15 #ABB0B6
+color8 #c7c7c7
+color9 #f07171
+color10 #6cbf43
+color11 #f2ae49
+color12 #399ee6
+color13 #a37acc
+color14 #4cbf99
+color15 #313d46
