Darkened dark white colour for better contrast

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -32,7 +32,7 @@ white = "#828c99"
 # Bright colors
 [colors.bright]
 # color 8
-black = "#f3f3f3"
+black = "#d9d8d7"
 # color 9
 red = "#e66c73"
 # color 10
