Updated alacritty to have a scrollback of 80,000 lines

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -155,6 +155,9 @@ size = 15.0
 [font.normal]
 family = "RobotoMono"
 
+[scrolling]
+history = 80000
+
 # Keybinding for Ctrl+Shift+Enter for spawning a new terminal in the
 # same directory.
 [keyboard]
