--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,28 +1,15 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
-
 [colors]
-background = #282A2E
+background = #f8f9fa
+# ??
 background-alt = #373B41
-foreground = #C5C8C6
+foreground = #5c6166
+# ??
 primary = #F0C674
+# ??
 secondary = #8ABEB7
+# ??
 alert = #A54242
+# ??
 disabled = #707880
 
 [bar/mybar]
@@ -48,11 +35,15 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+; You can find the exact name of the font you want to use by running `fc-list`
+; The number at the end of each line is the vertical offset for the font
+font-0 = Roboto Mono;2
+font-1 = FontAwesome:size=12;2
 
 modules-left = xworkspaces xwindow
+modules-center = time
 ; modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
-modules-right = pulseaudio memory cpu wlan eth date battery systray
+modules-right = pulseaudio memory cpu wlan eth battery systray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -67,7 +58,7 @@ wm-restack = i3
 enable-scroll = false
 
 ; Put the bar at the bottom of the screen
-bottom = true
+bottom = false
 
 ; override-redirect = true
 
@@ -173,15 +164,15 @@ inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
-[module/date]
-type = internal/date
+[module/time]
+type = custom/script
 interval = 1
+exec = echo " $(date +%I:%M:%S)"
 
-date = %I:%M:%S %a %m/%d
-; date-alt = %Y-%m-%d %H:%M:%S
-
-label = %date%
-label-foreground = ${colors.primary}
+[module/date]
+type = custom/script
+interval = 1
+exec = date "+%a %m/%d"
 
 [module/battery]
 type = internal/battery
